[gd_scene load_steps=10 format=3 uid="uid://bnoh7q3cl3qv2"]

[ext_resource type="Script" path="res://nodos/puzzle.gd" id="1_3oj4f"]
[ext_resource type="Texture2D" uid="uid://baet0kg8vig26" path="res://assets/Icon/puzzle_icon.png" id="2_h5v8w"]
[ext_resource type="FontFile" uid="uid://c1mtdl75tm6yo" path="res://Fuente/BestTen-DOT.otf" id="3_5dqvm"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xapti"]
size = Vector3(1.81546, 0.740934, 1.65277)

[sub_resource type="BoxMesh" id="BoxMesh_3knfq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_v2fvs"]
size = Vector3(6.80345, 4.67131, 19.8312)

[sub_resource type="Animation" id="Animation_ygpra"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ojnw3"]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kgtsp"]
_data = {
"RESET": SubResource("Animation_ygpra"),
"fadeout": SubResource("Animation_ojnw3")
}

[node name="Puzzle_entrada" type="Node3D"]
script = ExtResource("1_3oj4f")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.785911, 0.61834, 0, -0.61834, 0.785911, 0.0476718, 1.24106, 1.00516)

[node name="PuzzPos" type="Marker3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_xapti")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.211621, 0)
mesh = SubResource("BoxMesh_3knfq")
skeleton = NodePath("../../..")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.39875, 0)
shape = SubResource("BoxShape3D_v2fvs")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.46, 0.708)
billboard = 1
texture = ExtResource("2_h5v8w")

[node name="Label3D" type="Label3D" parent="Sprite3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.158098, 1.75054, 0)
pixel_size = 0.03
billboard = 1
texture_filter = 0
text = "Press \"E\""
font = ExtResource("3_5dqvm")
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kgtsp")
}

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
